--- a/src/index.css
+++ b/src/index.css
@@ -1432,14 +1432,15 @@ textarea.form-control.is-invalid {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+
 }
 
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #ffc800;
+  color: #ffc800 !important;
   text-decoration: none;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out !important;
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -1449,7 +1450,7 @@ textarea.form-control.is-invalid {
 }
 
 .nav-link:hover,.nav-link:focus {
-  color: #cca000;
+  color: #0dcaf0 !important;
 }
 
 .nav-link.disabled {
@@ -3956,12 +3957,16 @@ header.masthead .masthead-heading {
 .team-member img {
   width: 14rem;
   height: 14rem;
-  border: 0.5rem solid rgba(0, 0, 0, 0.1);
+  border: 0.5rem solid #ffc800;
 }
 
 .team-member h4,.team-member .h4 {
   margin-top: 1.5rem;
   margin-bottom: 0;
+}
+
+.team-member a{
+  background-color: #ffc800;
 }
 
 .img-brand {
